<resources>
    <string name="app_name">WheelsApp</string>
    <string name="preference_file_key" />
    <string name="ingresa_tus_datos">Ingresa tus datos</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="escribe_tu_correo_institucional">Escribe tu correo institucional</string>
    <string name="contraseña">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Historial</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Perfil</string>
    <string name="profile_editarperfil">Editar Perfil</string>
    <string name="profile_logout">Cerrar sesión</string>
    <string name="profile_institucion">Institución</string>
    <string name="profile_email">Correo electronico</string>
    <string name="profile_contacto">Contacto</string>
    <string name="profile_vehiculos">Vehiculos</string>
    <string name="register_registraringresar">Registrate para ingresar</string>
    <string name="register_universidad">Universidad</string>
    <string name="register_conductor">Resgitrar como conductor</string>
    <string name="register_pasajero">Registrar como pasajero</string>
    <string name="register_wheels">¿Ya estas registrado en Wheels?</string>
    <string name="register_login">Ingresa aquí</string>
    <string name="login_no_user_wheels">¿No eres un usuario de Wheels?</string>
    <string name="login_registrar">Registrar aquí</string>
    <string name="popup_user_firstname">Nombre(s)</string>
    <string name="popup_user_lastname">Apellidos</string>
    <string name="popup_user_phone">Celular</string>
    <string name="popup_user_continuar">Registrar</string>
    <string name="popup_vehi_avalai">Total de asientos disponibles</string>
    <string name="popup_vehi_avalai_des">¿Cuantas personas puedes llevar?</string>
    <string name="popup_vehi_des_vehi">Descripcion del vehiculo</string>
    <string name="popup_vehi_des_vehi_des">Nissan March Azul</string>
    <string name="popup_vehi_palca">Placa del vehiculo</string>
    <string name="popup_vehi_palca_des">ABC123</string>
    <string name="popup_vehi_model">Modelo del vehiculo</string>
    <string name="popup_vehi_model_des">2022</string>
    <string name="popup_vehi_continuar">Continuar</string>
    <string name="home_prox_viajes">Proximos Viajes</string>
    <string name="dashboard_prox_viajes">Viajes Recientes</string>
    <string name="home_conductor">Ver como conductor</string>
    <string name="home_pasajero">Ver como pasajero</string>
    <string name="home_create_route">Crear ruta</string>

</resources>