<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/sign_in"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="271dp"
        android:layout_height="29dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="92dp"
        android:text="@string/register_registraringresar"
        android:textColor="@color/white_wheels"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="206dp"
        android:layout_height="24dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="160dp"
        android:text="@string/nombre_de_usuario"
        android:textColor="@color/blue_wheels"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="208dp"
        android:layout_height="17dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="184dp"
        android:text="@string/escribe_tu_correo_institucional"
        android:textColor="@color/white_wheels"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="325dp"
        android:layout_height="45dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="208dp"
        android:background="@drawable/edittext_border"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="@color/white_wheels"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="103dp"
        android:layout_height="27dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="272dp"
        android:text="@string/contraseña"
        android:textColor="@color/blue_wheels"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="324dp"
        android:layout_height="45dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="300dp"
        android:background="@drawable/edittext_border"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@color/white_wheels"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="114dp"
        android:layout_height="27dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="368dp"
        android:text="@string/register_universidad"
        android:textColor="@color/blue_wheels"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="480dp"
        android:lineSpacingExtra="-50dp"
        android:text="@string/register_conductor"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/orange_wheels"
        android:textSize="20sp"
        android:onClick="popRegisterVehic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/orange_wheels"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button2"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="540dp"
        android:onClick="popRegisterUser"
        android:text="@string/register_pasajero"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white_wheels"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/white_wheels"
        tools:ignore="MissingConstraints" />

    <Spinner
        android:id="@+id/spinner"
        style="@android:style/Widget.Holo.Light.Spinner"
        android:layout_width="324dp"
        android:layout_height="45dp"
        android:layout_marginTop="404dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="325dp"
        android:layout_height="15dp"
        android:layout_marginTop="604dp"
        android:text="@string/register_wheels"
        android:textAlignment="center"
        android:textColor="@color/white_wheels"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.418"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="325dp"
        android:layout_height="16dp"
        android:layout_marginTop="616dp"
        android:clickable="true"
        android:onClick="login"
        android:text="@string/register_login"
        android:textAlignment="center"
        android:textColor="@color/orange_wheels"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.418"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>