<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".LoginActivity">

    <Button
        android:id="@+id/button1"
        android:layout_width="339dp"
        android:layout_height="51dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="535dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="145dp"
        android:backgroundTint="@color/pink_wheels"
        android:text="@string/ingresar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints,TextContrastCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="271dp"
        android:layout_height="29dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="92dp"
        android:text="@string/ingresa_tus_datos"
        android:textColor="@color/white_wheels"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="170dp"
        android:layout_height="27dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="160dp"
        android:text="@string/nombre_de_usuario"
        android:textColor="@color/blue_wheels"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="208dp"
        android:layout_height="17dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="184dp"
        android:text="@string/escribe_tu_correo_institucional"
        android:textColor="@color/blue_wheels_Dark"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="325dp"
        android:layout_height="45dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="208dp"
        android:layout_marginEnd="37dp"
        android:background="@drawable/edittext_border"
        android:ems="10"

        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="324dp"
        android:layout_height="45dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="37dp"
        android:background="@drawable/edittext_border"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="103dp"
        android:layout_height="27dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="20dp"
        android:text="@string/contraseña"
        android:textColor="@color/blue_wheels"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>