<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <TextView
        android:id="@+id/text_profile"
        android:layout_width="262dp"
        android:layout_height="32dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="92dp"

        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="96dp"
        android:layout_height="32dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="578dp"
        android:lineSpacingExtra="-50dp"
        android:text="@string/profile_editarperfil"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/pink_wheels"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_profile"
        app:layout_constraintVertical_bias="0.7"
        app:strokeColor="@color/pink_wheels"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button2"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="103dp"
        android:layout_height="32dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="578dp"
        android:lineSpacingExtra="-50sp"
        android:onClick="logOut"
        android:text="@string/profile_logout"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/blue_wheels_Dark"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_profile"
        app:layout_constraintVertical_bias="0.7"
        app:strokeColor="@color/blue_wheels_Dark"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="206dp"
        android:layout_height="24dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="180dp"
        android:text="@string/profile_institucion"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="206dp"
        android:layout_height="24dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="249dp"
        android:text="@string/profile_email"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="206dp"
        android:layout_height="24dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="318dp"
        android:text="@string/profile_contacto"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="206dp"
        android:layout_height="24dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="387dp"
        android:text="@string/profile_vehiculos"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="330dp"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="273dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:enabled="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonIns"
        android:layout_width="330dp"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="204dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:enabled="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonContact"
        android:layout_width="329dp"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="342dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:enabled="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <MultiAutoCompleteTextView
        android:id="@+id/multiAutoCompleteTextView"
        android:layout_width="331dp"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="411dp"
        android:enabled="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="56dp"
        android:layout_height="74dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="92dp"
        android:src="@drawable/ic_baseline_person_outline_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>